# LBMPC

./: .gitignore  CMakeLists.txt
examples/LidDrivenCavity2D/: config.xml  main.cpp  test.py
examples/ThermalDiffusion2D/: main.cpp
examples/ThermalFlow2D/: main.cpp
src/: cell.h  cell.hh  cell2D.h  cell2D.hh  constants.h  cuda.cu  cuda.cuh  cuda.h  grid2D.h  grid2D.hh  gridGeometry.h  gridGeometry.hh  gridGeometry2D.h  gridGeometry2D.hh  latticeGrid.h  latticeGrid.hh  latticeGrid2D.h  latticeGrid2D.hh  lbmGrid.hh  lbmModel.h  lbmModel.hh  simulation.h  simulation.hh  solver.h  solver.hh
src/core/: boundaryConditions.h  boundaryConditions.hh  cell.h  cell.hh  collisionModel.h  collisionModel.hh  constants.cpp  constants.h  gridGeometry.h  gridGeometry.hh  kernelParameters.h  kernelParameters.hh  kernelParams.h  lbConstants.h  lbGrid.h  lbGrid.hh  lbModel.h  lbModel.hh  lbmGrid.h  lbmGrid.hh  lbmModel.h  lbmModel.hh  platform_definitions.h  simulation.h  simulation.hh  simulationParams.h  utilities.cpp  utilities.h
src/core/boundary/: boundaryConditions.h  boundaryConditions.hh
src/core/descriptors/: aliases.h  descriptors.h  fieldTags.h  latticeDescriptors.h
src/core/functors/: functors.h  functors.hh
src/core/grid/: gridGeometry1D.h  gridGeometry1D.hh  gridGeometry2D.h  gridGeometry2D.hh  gridGeometryBase.h  gridGeometryBase.hh
src/core/lb/: boundaryConditions.h  boundaryConditions.hh  cell.h  cell.hh  collisionModel.h  collisionModel.hh  lbConstants.h  lbGrid.h  lbGrid.hh  lbModel.h  lbModel.hh
src/cuda/: cell.h  cell.hh  cuda.cu  cuda.h  cudaConstants.cuh  cudaErrorHandler.cuh  cudaErrorHandler.h  cudaKernels.cu  cudaKernels.cuh  cudaKernels.h  cudaUtilities.cpp  cudaUtilities.cu  cudaUtilities.cuh  cudaUtilities.h  template_instantiations.cu
src/io/: configurationManager.h  configurationManager.hh  vtkWriter.h  vtkWriter.hh
src/utilities/: fraction.h
